01.05.2020
[*] Upd:
    + Added my libraries (PDO, SID, router, etc.)
    + Added helpers
    + Added models
    * dorf1 and dorf2 medium refactoring

30.04.2020
[*] global variables call fixed
[*] cookies expiration date in js fixed
[*] empty POST warning fix
[*] palace fixed

29.04.2020
[*] admin/database fixed and decorated
[*] Automation filelockers fixed
[*] db connection completely fixed
[*] deprecated mysql not available any more

28.04.2020
[*] install fixed and decorated
[*] moved queries from index.php to model
[*] session fixed to support mysqli
[*] Units fixed and decorated
[*] Ranking fixed and decorated
[*] Multisort deprecated code fix
[*] templates db connection fixed

27.04.2020
[*] deprecated class contructor call fixed
[*] protection fixed to support mysqli
[*] broken class db_MYSQLi fixed and partially decorated
[*] admin/database use mysqli and decorated

26.04.2020
[+] composer