@@ -9,9 +9,9 @@ class User extends AbstractModel
     public function setSelectedVillage(int $userId, int $villageId)
     {
         $this->db->query(
-            "UPDATE " . $this->tablePrefix . "users
-             SET village_select=" . $villageId . "
-             WHERE id=" . $userId
+            "UPDATE {$this->tablePrefix}users
+             SET village_select = {$villageId}
+             WHERE id = {$userId}"
         );
     }
 }
