@@ -1,4 +1,0 @@
-<Files ~ "\.tpl$">
-Order allow,deny
-Deny from all
-</Files>
