@@ -1,1 +1,0 @@
-<b><center>TravianX</center></b>
