@@ -1,9 +1,7 @@
-<h5><img src="img/en/t2/newsbox2.gif" alt="newsbox 2"></h5>
+<h5><img src="/img/en/t2/newsbox2.gif" alt="newsbox 2"></h5>
 <?php
-
-$online = $database->numRows($database->query("SELECT * FROM " . TB_PREFIX . "users WHERE " . time() . "-timestamp < (60*10) AND tribe!=0 AND tribe!=4 AND tribe!=5"));
-
-
+$serverStat = new \App\Models\User\ServerStatistic();
+$online = $serverStat->getOnlinePlayers();
 ?>
 
 <div class="news">
