@@ -1,0 +1,13 @@
+<h5><img src="/img/en/t2/newsbox3.gif" alt="newsbox 2"></h5>
+
+<div class="news">
+    <b><center>TravianZ by Shadow</center></b><br />
+    <b>Version: <font color="Red">v8.0.0</font></b><br />
+    <b>Major Changes:</b> New index.php, chief training fixed, graphic packs now work but only for outside links. See more in readme file!<br />
+    <b>Minor Changes:</b> Admin panel updated a bit, config updated, installation system updated<br />
+    <b>Script Price:</b> FREE!<br /><br />
+    <center>
+        <b><u>Released by: Shadow</u></b><br />
+        <b>Visit: <a href="http://forum.ragezone.com/f583/travianz-version-modified-shadow-many-967580/">RageZone.com</a></b><br />
+    </center>
+</div>
