@@ -1,0 +1,13 @@
+<?php
+
+if (NEWSBOX1){
+    include "News/newsbox1.php";
+}
+
+if (NEWSBOX2){
+    include "News/newsbox2.php";
+}
+
+if (NEWSBOX3){
+    include "News/newsbox3.php";
+}
