@@ -1,22 +1,0 @@
-<?php 
-#################################################################################
-##              -= YOU MAY NOT REMOVE OR CHANGE THIS NOTICE =-                 ##
-## --------------------------------------------------------------------------- ##
-##  Filename       news.tpl                                                    ##
-##  Developed by:  Dzoki                                                       ##
-##  License:       TravianX Project                                            ##
-##  Copyright:     TravianX (c) 2010-2011. All rights reserved.                ##
-##                                                                             ##
-#################################################################################
-?>
-<?php
-if(NEWSBOX1){
-	include "News/newsbox1.tpl";
-	}
-if(NEWSBOX2){
-	include "News/newsbox2.tpl";
-	}
-if(NEWSBOX3){
-	include "News/newsbox3.tpl";
-	}
-?>
