@@ -342,7 +342,7 @@ $golds1 = $this->db->fetchArray($MyGold);
 <?php
 include("Templates/multivillage.tpl");
 include("Templates/quest.tpl");
-include("Templates/news.tpl");
+include("Templates/news.php");
 include("Templates/links.tpl");
 ?>
 </div>
