@@ -295,7 +295,7 @@ $invite_permission = $database->getAlliancePermission($session->uid, "opt4", 0);
 <?php
 include("Templates/multivillage.tpl");
 include("Templates/quest.tpl");
-include("Templates/news.tpl");
+include("Templates/news.php");
 include("Templates/links.tpl");
 ?>
 </div>
