@@ -129,9 +129,7 @@ echo $form->getError('agree');
 <?php } ?>
 <div id="side_info" class="outgame">
 <?php
-if(NEWSBOX1) { include("Templates/News/newsbox1.tpl"); }
-if(NEWSBOX2) { include("Templates/News/newsbox2.tpl"); }
-if(NEWSBOX3) { include("Templates/News/newsbox3.tpl"); }
+include 'Templates/news.php';
 ?>
 			</div>
 
