@@ -63,7 +63,7 @@ include("Admin/Templates/ban_msg.tpl");
 <?php
 include("Templates/multivillage.tpl");
 include("Templates/quest.tpl");
-include("Templates/news.tpl");
+include("Templates/news.php");
 include("Templates/links.tpl");
 ?>
 </div>
