@@ -81,7 +81,7 @@ require_once 'Templates/head.php';
           <?php
           include("Templates/multivillage.tpl");
           include("Templates/quest.tpl");
-          include("Templates/news.tpl");
+          include("Templates/news.php");
           include("Templates/links.tpl");
           ?>
       </div>
