@@ -215,9 +215,7 @@ echo "<p class=\"error_box\">
 </div>
 <div id="side_info" class="outgame">
 <?php
-if(NEWSBOX1) { include("Templates/News/newsbox1.tpl"); }
-if(NEWSBOX2) { include("Templates/News/newsbox2.tpl"); }
-if(NEWSBOX3) { include("Templates/News/newsbox3.tpl"); }
+include("Templates/News.php");
 ?>
 			</div>
 
