@@ -67,7 +67,7 @@ if(isset($_GET['newdid'])) {
 <?php
 include("Templates/multivillage.tpl");
 include("Templates/quest.tpl");
-include("Templates/news.tpl");
+include("Templates/news.php");
 include("Templates/links.tpl");
 ?>
 </div>
