@@ -161,7 +161,7 @@ else if (isset($_GET['s'])) {
 <?php
 include("Templates/multivillage.tpl");
 include("Templates/quest.tpl");
-include("Templates/news.tpl");
+include("Templates/news.php");
 include("Templates/links.tpl");
 ?>
  </div>
