@@ -228,7 +228,7 @@ $q = "
 					<?php
 					include("Templates/multivillage.tpl");
 					include("Templates/quest.tpl");
-					include("Templates/news.tpl");
+					include("Templates/news.php");
 					include("Templates/links.tpl");
 					?>
 				</div>
