@@ -4,6 +4,7 @@
     + Added helpers
     + Added models
     * dorf1 and dorf2 medium refactoring
+[*] newsbox decorated
 
 30.04.2020
 [*] global variables call fixed
